{{cookiecutter.project_slug}}/_/deployment/python/deployment/application/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
spec:
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        name: application
    spec:
      containers:
      - name: django
        image: IMAGE
        ports:
        - name: uwsgi
          containerPort: 8000
        livenessProbe:
          tcpSocket:
            port: uwsgi
          initialDelaySeconds: 13
        readinessProbe:
          tcpSocket:
            port: uwsgi
          initialDelaySeconds: 9
        resources:
          requests:
            cpu: 500m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "20"]
        volumeMounts:
        - mountPath: /app/backups
          name: backup-volume        
      - name: nginx
        image: IMAGE
        command: ['nginx']
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 13
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 9
        resources:
          requests:
            cpu: 100m
            memory: 32Mi
          limits:
            cpu: 200m
            memory: 64Mi
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "20"]
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  name: application
              topologyKey: kubernetes.io/hostname
      volumes:
      - name: backup-volume
        emptyDir: {}
