{{cookiecutter.project_slug}}/_/deployment/python/deployment/application/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "application"
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
