{{cookiecutter.project_slug}}/_/deployment/python/deployment/application/base/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: application
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: application
